给所有数据库模型对象都加上build_in属性，用于判断是否是系统内置的，从而可以实现数据库模型对象内置的字段、外键等不能删除，但可以额外增加字段、外键等的功能